--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,27 @@ body * {
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+body {
+}
+
+.container {
+}
+    .left {
+    }
+        h1 {
+        }
+        footer {
+        }
+            footer > a {
+            }
+            footer > span {
+            }
+    .right {
+    }
+        .x {
+        }
+        .form-row > span {
+        }
+        .form-row > a {
+        }
