--- a/css/main.css
+++ b/css/main.css
@@ -11,22 +11,44 @@ body {
 }
 
 .container {
+    display: inline-block;
+    width: 800px;
+    margin-top: 40px;
+    margin-left: calc( (100% - 800px) / 2 );
 }
     .left {
+        display: inline-block;
+        width: 40%;
+        float: left;
+        background-color: aqua;
     }
         h1 {
+            display: inline-block;
+            width: 100%;
         }
         footer {
+            display: inline-block;
+            width: 100%;
         }
             footer > a {
+                display: inline-block;
             }
             footer > span {
+                display: inline-block;
             }
     .right {
+        display: inline-block;
+        width: 60%;
+        float: left;
+        padding: 80px;
+        background-color: pink;
     }
         .x {
+            display: inline-block;
         }
         .form-row > span {
+            display: inline-block;
         }
         .form-row > a {
+            display: inline-block;
         }
