--- a/css/button.css
+++ b/css/button.css
@@ -1,3 +1,12 @@
 .btn {
     display: inline-block;
+    background-color: #2555D4;
+    color: #fff;
+    font-size: 18px;
+    line-height: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 40px;
+    padding-left: 40px;
+    border-radius: 20px;
 }
