--- a/css/form.css
+++ b/css/form.css
@@ -13,8 +13,17 @@ form {
         label {
             display: inline-block;
             width: 100%;
+            margin-bottom: 5px;
+            color: #555;
+            font-size: 16px;
+            line-height: 20px;
+            text-transform: uppercase;
         }
         input {
             display: inline-block;
             width: 100%;
+            font-size: 20px;
+            line-height: 40px;
+            border: none;
+            border-bottom: 2px solid #ccc;
         }
