--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,5 @@
-body,
-body * {
-    margin: 0;
-    padding: 0;
-    vertical-align: top;
-    box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
 body {
+    background-color: #847DC4;
 }
 
 .container {
@@ -20,7 +12,8 @@ body {
         display: inline-block;
         width: 40%;
         float: left;
-        background-color: aqua;
+        background-color: #3853AA;
+        color: #fff;
     }
         h1 {
             display: inline-block;
@@ -32,6 +25,7 @@ body {
         }
             footer > a {
                 display: inline-block;
+                color: #fff;
             }
             footer > span {
                 display: inline-block;
@@ -41,14 +35,24 @@ body {
         width: 60%;
         float: left;
         padding: 80px;
-        background-color: pink;
+        background-color: #fff;
     }
         .x {
             display: inline-block;
         }
         .form-row > span {
             display: inline-block;
+            font-size: 18px;
+            margin-left: 25px;
+            margin-right: 25px;
+            line-height: 20px;
+            padding-top: 10px;
+            padding-bottom: 10px;
         }
         .form-row > a {
             display: inline-block;
+            font-size: 18px;
+            line-height: 20px;
+            padding-top: 10px;
+            padding-bottom: 10px;
         }
