--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,8 @@ body {
     width: 800px;
     margin-top: 40px;
     margin-left: calc( (100% - 800px) / 2 );
+
+    position: relative;
 }
     .left {
         display: inline-block;
@@ -14,14 +16,25 @@ body {
         float: left;
         background-color: #3853AA;
         color: #fff;
+
+        position: absolute;
+        top: 30px;
+        bottom: 30px;
+        left: 0;
     }
         h1 {
             display: inline-block;
             width: 100%;
+            padding: 20px;
         }
         footer {
             display: inline-block;
             width: 100%;
+            padding: 20px;
+
+            position: absolute;
+            bottom: 0;
+            left: 0;
         }
             footer > a {
                 display: inline-block;
@@ -33,12 +46,23 @@ body {
     .right {
         display: inline-block;
         width: 60%;
-        float: left;
+        float: right;
         padding: 80px;
         background-color: #fff;
+
+        position: relative;
     }
         .x {
             display: inline-block;
+            width: 80px;
+            height: 80px;
+            font-size: 40px;
+            line-height: 74px;
+            text-align: center;
+
+            position: absolute;
+            top: 0;
+            right: 0;
         }
         .form-row > span {
             display: inline-block;
