--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@ body {
         width: 40%;
         float: left;
         background-color: #3853AA;
+        background-image: url(../img/hill.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
         color: #fff;
 
         position: absolute;
