--- a/css/main.css
+++ b/css/main.css
@@ -2,13 +2,26 @@ body {
     background-color: #847DC4;
 }
 
+.background {
+    display: inline-block;
+    width: 100%;
+    height: 100vh;
+    background-image: url(../img/hill.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+}
+
 .container {
     display: inline-block;
     width: 800px;
-    margin-top: 40px;
-    margin-left: calc( (100% - 800px) / 2 );
 
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
     .left {
         display: inline-block;
