Focus and hover states

--- a/css/button.css
+++ b/css/button.css
@@ -9,4 +9,18 @@
     padding-right: 40px;
     padding-left: 40px;
     border-radius: 20px;
+    cursor: pointer;
 }
+    /* .btn:hover {
+        background-color: #fff;
+        color: #333;
+        border: 2px solid #2555D4;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        padding-right: 38px;
+        padding-left: 38px;
+    } */
+    .btn:hover {
+        background-color: rgb(90, 124, 218);
+        box-shadow: 0 4px 8px #0008;
+    }
