--- a/css/form.css
+++ b/css/form.css
@@ -27,3 +27,7 @@ form {
             border: none;
             border-bottom: 2px solid #ccc;
         }
+            input:focus {
+                outline: none;
+                background-color: yellow;
+            }
